--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
-    "mongoose": "^6.0.13",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "node-sass": "^6.0.1",
     "passport": "^0.5.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.12.0-beta.3",
+    "tedious": "^14.0.0"
   },
   "devDependencies": {
     "faker": "^5.5.3",
