--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-#DB_CONNECTION_STRING="mongodb://localhost/elfyer_db"
-DB_CONNECTION_STRING="mongodb+srv://namworkmc:gosuandpeep12@eflyer-cluster.mp2iy.mongodb.net/elfyer_db?retryWrites=true&w=majority"
+DB_NAME="HE_THONG_SHIP"
+DB_USERNAME="sa"
+DB_PASSWORD="123"
 
 PORT="8080"
 
