--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
+    "mongoose": "^6.1.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "node-sass": "^6.0.1",
