--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.1.2",
     "morgan": "~1.9.1",
+    "mssql": "^7.3.0",
     "multer": "^1.4.4",
     "node-sass": "^6.0.1",
     "passport": "^0.5.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "faker": "^5.5.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "2.5.1"
   }
 }
